--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .container_login{
   display: flex;
   flex-direction: column;
@@ -6,7 +10,7 @@
   height: 100vh;
   background-color: black;
   background-image: url('./images/loginFoto.jpeg');
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -37,19 +41,38 @@
 }
 
 .buton_login{
+  color: black;
   border-color: transparent;
   width: 90px;
   background-color: azure;
   border-radius: 5px;
-  text-decoration: dotted;
+  text-decoration: none;
+  text-align: center;
 }
 
+.buton_login_cadastro{
+  color: rgb(250, 250, 250);
+  border-color: transparent;
+  width: 110px;
+  background-color: rgba(255, 255, 255, 0.459);
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+}
 .buton_login:hover{
   border-color: rgb(7, 123, 255);
   background-color: none;
   transition: 1s ease-in-out;
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px  rgba(0, 119, 255, 0.993);
+}
+.buton_login_cadastro:hover{
+  border-color: rgb(7, 123, 255);
+  background-color: none;
+  transition: 0.5s ease-in-out;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px 0px  rgba(46, 140, 247, 0.993);
 }
 .container_input{
   display: flex;
@@ -89,4 +112,102 @@ label{
   color: red;
   font-weight: bolder;
   text-transform: uppercase;
+}
+.card{
+  width: 200px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: rgba(150, 146, 138, 0.342);
+  border-radius: 10px;
+}
+.card:hover{
+  background-color: rgba(150, 146, 138, 0.582);
+}
+
+.container_card{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+header{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+text-align: center;
+background-color: rgb(0, 0, 0);
+height: 100px;
+width: 99vw;
+}
+header > h1 {
+color: white;
+}
+.container_Producs{
+  background-color: black;
+  background-image: url('./images/01.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-shadow: 1px 1px 1px rgb(168, 74, 74);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 50px;
+  height: 86vh;
+}
+.products_input {
+  font-size: larger;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.container_products_input{
+  display: flex;
+  gap: 10px;
+  background-color: black;
+  align-items: center;
+  justify-content: center;
+}
+
+.exit{
+  position: absolute;
+  margin-left: 80vw;
+  width: 90px;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  background-color: transparent;
+  border: 1px 1px 1px solid white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.exit:hover{
+  color: rgb(7, 7, 7);
+  background-color: white;
+  border: 1px 1px 1px solid rgb(128, 128, 128);
+  transition: 0.5s;
+  
+}
+.exit > label{
+  display: block;
+}
+.button_card{
+  background-color: transparent;
+  border: none;
+  width: 20px;
+}
+
+.button_card:hover{
+  border: 1px 1px solid black;
+  background-color: rgba(71, 14, 14, 0.541);
+  border-radius: 10px;
 }
