--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,30 @@ color: white;
   align-items: center;
   justify-content: space-evenly;
 }
+.profile{
+  position: absolute;
+  top: 70px;
+  margin-left: 80vw;
+  width: 90px;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  background-color: transparent;
+  border: 1px 1px 1px solid white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.profile > label{
+  display: block;
+}
+.profile:hover{
+  color: rgb(7, 7, 7);
+  background-color: white;
+  border: 1px 1px 1px solid rgb(128, 128, 128);
+  transition: 0.5s;
+  
+}
 
 .exit:hover{
   color: rgb(7, 7, 7);
