--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,10 @@
   text-align: center;
   font-weight: bold;
   line-height: 35px;
+  text-shadow: 2px 2px 8px rgb(2, 2, 2);
+}
+.card > p {
+  text-shadow: 2px 2px 8px violet;
 }
 .buton_login:hover{
   border-color: rgb(7, 123, 255);
@@ -194,19 +198,22 @@ header{
   justify-content: center;
   flex-direction: row;
 text-align: center;
-background-color: rgb(0, 0, 0);
+background-color: rgba(0, 0, 0, 0);
 height: 100px;
 width: 99vw;
+}
+.background_prouct{
+  background-image: url('./images/01.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 header > h1 {
 color: white;
 }
 .container_Producs{
-  background-color: black;
-  background-image: url('./images/01.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+ 
   color: white;
   text-shadow: 1px 1px 1px rgb(168, 74, 74);
   display: flex;
@@ -225,12 +232,16 @@ color: white;
 .container_products_input{
   display: flex;
   gap: 10px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   align-items: center;
   justify-content: center;
   padding-top: 30px;
 }
-
+.tittle_header{
+  text-shadow: 2px 2px 8px rgb(2, 2, 2);
+  font-weight: bolder;
+  font-size: 50px;
+}
 .exit{
   position: absolute;
   margin-left: 80vw;
